<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/nuevo_aviso"
        android:textSize="19sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/texto_nuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/que_hay_que_hacer"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="500"
        android:maxLines="4"
        android:minLines="1" />

    <TextView
        android:id="@+id/mensaje_nuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/boton_cancelar"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/boton_agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar" />
    </LinearLayout>
</LinearLayout>
